--- a/spring-learn/pom.xml
+++ b/spring-learn/pom.xml
@@ -50,9 +50,13 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.79</version>
+        </dependency>
     </dependencies>
-
-
 
     <build>
         <plugins>
