--- a/spring-learn/pom.xml
+++ b/spring-learn/pom.xml
@@ -75,6 +75,12 @@
             <version>1.18.22</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
